Start OnboardingActivity layout and fragment structure
- hide action bar on OnboardingActivity
- start fragment layout implementation
- add strings on strings.xml
- add colors on colors.xml

Signed-off-by: Agnaldo Rodrigues de Carvalho <agnaldo.carvalho@cedrotech.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidTest03</string>
+    <string name="tv_welcome">Bem Vindo</string>
+    <string name="btn_begin_register">Iniciar Cadastro</string>
 </resources>
