--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AndroidTest03</string>
+    <string name="title_register">Registrar</string>
     <string name="tv_welcome">Bem Vindo</string>
     <string name="btn_begin_register">Iniciar Cadastro</string>
 </resources>
