Implements Sugar ORM Library and starts ListActivity implementation
- fixes layout validation issues on register fragment
- implements sugar orm library
- saves user into database
- provides method to list users
- starts list activity implementation
- registers activity in manifest
- adds string resources to strings.xml

Signed-off-by: Agnaldo Rodrigues de Carvalho <agnaldo.carvalho@cedrotech.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,10 @@
     <string name="et_cpf_error">CPF fora do padrão (xxx.xxx.xxx-xx).</string>
     <string name="et_cep_error">CEP fora do padrão (xxxxx-xxx).</string>
 
+    <string name="save_error">Erro ao salvar. Tente novamente mais tarde.</string>
+    <string name="list_error">Erro ao listar os usuários. Tente novamente mais tarde.</string>
+    <string name="list_empty">Não existem registros.</string>
+
+
 
 </resources>
