Implements Edit Screen
-Refactors fragment to be reused on edit screen
-Implements edit screen presenter and view interface
-Implements edit screen fragment structure and logic
-Implements menu layout and logic on EditFragment
-Finishes back button and home as up logic on app
-Adds backupId as temporary solution for id not being serialized
-Adds button logic to check address on map
-Adds class to mask birthDateEditText to date format

Signed-off-by: Agnaldo Rodrigues de Carvalho <agnaldo.carvalho@cedrotech.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,12 @@
     <string name="et_cep_error">CEP fora do padrão (xxxxx-xxx).</string>
 
     <string name="save_error">Erro ao salvar.</string>
+    <string name="edit_success">Usuário editado com sucesso.</string>
+
     <string name="fetch_cep_error">Erro ao carregar as informações do CEP. Por favor cheque sua conexão ou preencha os campos manualmente.</string>
     <string name="list_error">Erro ao listar os usuários.</string>
     <string name="list_empty">Não existem registros.</string>
 
     <string name="bottom_button_register">Ver a lista de usuarios</string>
+    <string name="bottom_button_edit">Ver o endereço no mapa</string>
 </resources>
